# ai-tech-blog-autogen

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  README_WEEKLY_TREND_WORKER.md  TECHNICAL_IMPLEMENTATION.md  compose.yaml  example_config.json  export_data.py  main.py  pyproject.toml  pytest.ini  run_multi_agent_tests.py  run_tests.py
.claude/commands/: py-expert.md
.github/workflows/: claude.yml
.kiro/specs/01-weekly-trend-worker/: design.md  requirements.md
.kiro/specs/02-enhanced-blog-title-discovery/: design.md  requirements.md  tasks.md
.kiro/specs/03-multi-agent-blog-writer/: design.md  requirements.md  tasks.md
.kiro/specs/04-conversational-developer-blog-writer/: design.md  requirements.md  tasks.md
.kiro/specs/multi-agent-blog-writer/: tasks.md
.kiro/specs/weekly-trend-worker/: tasks.md
docs/: CONVERSATIONAL_BLOG_WRITER.md  MULTI-AGENT_BLOG_WRITER.md  TODO.md
migrations/models/: 0_20250812091042_init.py
scripts/: enhanced_weekly_trend_worker.py  weekly_trend_worker.py
src/: __init__.py  py_env.py
src/agents/: content_planner.py  writing_team.py
src/api/: main.py
src/autogen_blog/: __init__.py  advanced_file_parsers.py  agents.py  base_agent.py  blog_writer_orchestrator.py  code_agent.py  content_generator.py  content_planner_agent.py  conversational_config_manager.py  conversational_quality_validator.py  conversational_writer_agent.py  critic_agent.py  database.py  dialogue_generator.py  file_storage.py  information_synthesizer.py  models.py  multi_agent_blog_writer.py  multi_agent_models.py  persona_system.py  research_processor.py  seo_agent.py  tools.py  trend_spotter.py  visuals.py  writer_agent.py
src/services/topic_discovery/: ai_fallback_handler.py  ai_semantic_analyzer.py  blog_title_generator.py  config.py  context_enricher.py  enhanced_content_extractor.py  enhanced_weekly_trend_worker.py  github_scanner.py  news_scanner.py  pattern_detector.py  stackoverflow_scanner.py  title_scorer_ranker.py  topic_aggregator.py  trend_spotter.py  weekly_trend_worker.py
tests/: README.md  conftest.py  test_ai_fallback_handler.py  test_ai_semantic_analyzer.py  test_base_agent.py  test_blog_title_generator.py  test_blog_writer_orchestrator.py  test_content_planner_agent.py  test_enhanced_content_extractor.py  test_integration.py  test_multi_agent_integration.py  test_multi_agent_models.py  test_news_scanner.py  test_trend_spotter.py  test_weekly_trend_worker.py
