[project]
name = "automated-blog"
version = "0.1.0"
description = "Automated blog generation using AI agents."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.15",
    "asyncio>=4.0.0",
    "autogen-agentchat>=0.7.1",
    "autogen-ext[openai]>=0.7.1",
    "boto3>=1.40.21",
    "bs4>=0.0.2",
    "fastapi>=0.104.0",
    "feedparser>=6.0.11",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "requests>=2.31.0",
    "uvicorn[standard]>=0.24.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
]

[dependency-groups]
dev = [
    "debugpy>=1.8.15",
]
test = [
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "pytest-timeout>=2.4.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-dir]
"" = "."

